Repository with only essential files - no large data files

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,29 @@ htmlcov/
 .vscode/
 .idea/
 .DS_Store
+
+# Machine Learning data files
+*.npy
+*.npz
+*.h5
+*.hdf5
+*.pkl
+*.pickle
+*.weights
+*.ckpt
+*.pb
+*.pth
+*.tar
+*.zip
+data/
+datasets/
+models/
+checkpoints/
+logs/
+tensorboard_logs/
+*.csv
+*.json
+*.parquet
+synthetic_images.npy
+synthetic_labels.npy
+cifar10_cgan_generator.keras
